--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,4 +21,17 @@ h2,
 h3 {
   margin: 0;
   font-weight: normal;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.foto {
+  max-width: 1400px;
+  width: 100%;
+  background-color: #181313;
+  height: 100vh;
 }/*# sourceMappingURL=index.css.map */
