--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,7 @@
+:root {
+  --backСolor: #181313;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -24,15 +28,71 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--backСolor);
+}
+
+.nav {
+  color: #f0f8ff;
+  position: fixed;
+  right: 0;
+  // top: 50%;
+  height: 100%;
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+    height: 100%;
+    justify-content: center;
+  }
+}
+section {
+  height: 100vh;
+  max-width: 1400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .foto {
-  max-width: 1400px;
   width: 100%;
-  background-color: #181313;
-  height: 100vh;
+  height: 92%;
+}
 
-  //   svg {
-  //     background-color: #fff;
-  //   }
+.my-skills {
+  overflow: hidden;
+  width: 100%;
+  flex-grow: 1;
+}
+.my-skills__content {
+  display: flex;
+  width: 200%;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  animation: slide 110s linear infinite;
+  span {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    a {
+      margin-left: 20px;
+      img {
+        height: 50px;
+        width: 50px;
+      }
+    }
+  }
+  &:hover {
+    animation-play-state: paused;
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
