--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,9 +36,8 @@ body {
 }
 
 .nav {
-  color: #f0f8ff;
   position: fixed;
-  right: 0;
+  right: 2%;
   height: 100%;
 }
 .nav ul {
@@ -47,6 +46,12 @@ body {
   gap: 2%;
   height: 100%;
   justify-content: center;
+}
+.nav ul li {
+  height: 15px;
+  width: 15px;
+  background-color: #34c300;
+  border-radius: 50%;
 }
 
 section {
