--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 :root {
   --backСolor: #181313;
+  --mainСolor: #34c300;
 }
 
 * {
@@ -28,30 +29,51 @@ h3 {
   font-weight: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--backСolor);
+  color: var(--mainСolor);
 }
 
 .nav {
   position: fixed;
   right: 2%;
-  height: 100%;
-}
-.nav ul {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  gap: 2%;
-  height: 100%;
   justify-content: center;
+  gap: 2%;
+  z-index: 100;
 }
-.nav ul li {
+.nav a {
   height: 15px;
   width: 15px;
-  background-color: #34c300;
+  background-color: #2b9206;
   border-radius: 50%;
+  position: relative;
+  display: inline-block;
+}
+.nav a::before, .nav a::after {
+  content: "";
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+.nav a::before {
+  background-color: unset;
+  top: -7px;
+  left: -7px;
+}
+.nav a.active {
+  box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
+  background-color: #34c300;
 }
 
 section {
@@ -61,6 +83,16 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+
+#section1 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
 .foto {
@@ -72,6 +104,9 @@ section {
   overflow: hidden;
   width: 100%;
   flex-grow: 1;
+  box-shadow: inset 0 0 2px var(--backСolor), inset 0 0 4px var(--backСolor), inset 0 0 8px var(--backСolor);
+  background: linear-gradient(to top, var(--backСolor), var(--mainСolor), var(--backСolor));
+  border-radius: 40px;
 }
 
 .my-skills__content {
@@ -105,4 +140,12 @@ section {
   100% {
     transform: translateX(-50%);
   }
+}
+.line {
+  border: 1px solid var(--mainСolor);
+  width: 80%;
+  position: absolute;
+  top: 10px;
+  border-radius: 1px;
+  box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
 }/*# sourceMappingURL=index.css.map */
