--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,19 +18,20 @@ a {
 ul,
 ol {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 h1,
 h2,
 h3 {
-  margin: 0;
   font-weight: normal;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+h1 {
+  font-size: 2em;
 }
 
 body {
@@ -73,7 +74,7 @@ body {
 }
 .nav a.active {
   box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
-  background-color: #34c300;
+  background-color: #1dff00;
 }
 
 section {
@@ -98,6 +99,51 @@ section {
 .foto {
   width: 100%;
   height: 92%;
+  position: relative;
+}
+
+.perform {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2%;
+}
+
+.dopInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90%;
+  align-items: flex-end;
+}
+.dopInfo div {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.contacts a {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  flex-wrap: wrap;
+  transition: box-shadow 0.3s, fill 0.3s, text-shadow 0.3s, color 0.3s;
+}
+.contacts a:hover {
+  color: #1dff00;
+  text-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09, 0px 0px 16px #00ff09;
+}
+.contacts a:hover svg {
+  fill: #1dff00;
+  box-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09, 0px 0px 16px #00ff09;
 }
 
 .my-skills {
@@ -148,4 +194,23 @@ section {
   top: 10px;
   border-radius: 1px;
   box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
+}
+
+.icons {
+  fill: #2b9206;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
+.BRR {
+  border: 2px solid #ff0000;
+}
+
+.BRB {
+  border: 2px solid #001eff;
+}
+
+.BRG {
+  border: 2px solid #3cff00;
 }/*# sourceMappingURL=index.css.map */
