--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,3 @@
-@charset "UTF-8";
-:root {
-  --backСolor: #181313;
-  --mainСolor: #34c300;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -38,8 +32,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--backСolor);
-  color: var(--mainСolor);
+  background-color: #181313;
+  color: #34c300;
 }
 
 .nav {
@@ -73,7 +67,7 @@ body {
   left: -7px;
 }
 .nav a.active {
-  box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
+  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
   background-color: #1dff00;
 }
 
@@ -85,15 +79,6 @@ section {
   flex-direction: column;
   align-items: center;
   position: relative;
-}
-
-#section1 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
 }
 
 .foto {
@@ -139,19 +124,19 @@ section {
 }
 .contacts a:hover {
   color: #1dff00;
-  text-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09, 0px 0px 16px #00ff09;
+  text-shadow: 0px 0px 4px #1dff00, 0px 0px 8px #1dff00, 0px 0px 16px #1dff00;
 }
 .contacts a:hover svg {
   fill: #1dff00;
-  box-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09, 0px 0px 16px #00ff09;
+  box-shadow: 0px 0px 4px #1dff00, 0px 0px 8px #1dff00, 0px 0px 16px #1dff00;
 }
 
 .my-skills {
   overflow: hidden;
   width: 100%;
   flex-grow: 1;
-  box-shadow: inset 0 0 2px var(--backСolor), inset 0 0 4px var(--backСolor), inset 0 0 8px var(--backСolor);
-  background: linear-gradient(to top, var(--backСolor), var(--mainСolor), var(--backСolor));
+  box-shadow: inset 0 0 2px #181313, inset 0 0 4px #181313, inset 0 0 8px #181313;
+  background: linear-gradient(to top, #181313, #34c300, #181313);
   border-radius: 40px;
 }
 
@@ -161,7 +146,7 @@ section {
   flex-direction: row;
   height: 100%;
   align-items: center;
-  animation: slide 110s linear infinite;
+  animation: slide 90s linear infinite;
 }
 .my-skills__content span {
   display: flex;
@@ -179,6 +164,85 @@ section {
   animation-play-state: paused;
 }
 
+#section1 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+@media (max-width: 600px) {
+  #section1 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+#section1 div {
+  width: 50%;
+  padding: 2%;
+  position: relative;
+}
+#section1 p {
+  padding-top: 20px;
+}
+
+#section2 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+@media (max-width: 600px) {
+  #section2 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+#section2 div {
+  width: 50%;
+  padding: 2%;
+  position: relative;
+}
+#section2 p {
+  padding-top: 20px;
+}
+
+#section3 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+@media (max-width: 600px) {
+  #section3 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+#section3 div {
+  width: 50%;
+  padding: 2%;
+  position: relative;
+}
+#section3 p {
+  padding-top: 20px;
+}
+
+.title h1 {
+  width: -moz-min-content;
+  width: min-content;
+  text-wrap: nowrap;
+}
+.title span {
+  bottom: 0;
+  top: auto;
+}
+
 @keyframes slide {
   0% {
     transform: translateX(0%);
@@ -187,17 +251,17 @@ section {
     transform: translateX(-50%);
   }
 }
-.line {
-  border: 1px solid var(--mainСolor);
+.lineSection {
+  border: 1px solid #34c300;
   width: 80%;
   position: absolute;
   top: 10px;
   border-radius: 1px;
-  box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor), 0 0 16px var(--mainСolor);
+  box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
 }
 
 .icons {
-  fill: #2b9206;
+  fill: #34c300;
   height: 20px;
   width: 20px;
   border-radius: 50%;
