--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,6 @@
-:root {
-  --backСolor: #181313;
-  --mainСolor: #34c300;
-}
+$backСolor: #181313;
+$mainСolor: #34c300;
+$backlight: #1dff00;
 
 * {
   margin: 0;
@@ -32,8 +31,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--backСolor);
-  color: var(--mainСolor);
+  background-color: $backСolor;
+  color: $mainСolor;
 }
 
 .nav {
@@ -71,9 +70,8 @@ body {
     }
 
     &.active {
-      box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor),
-        0 0 16px var(--mainСolor);
-      background-color: #1dff00;
+      box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, 0 0 16px $mainСolor;
+      background-color: $backlight;
     }
   }
   // }
@@ -86,15 +84,6 @@ section {
   flex-direction: column;
   align-items: center;
   position: relative;
-}
-
-#section1 {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
 }
 
 .foto {
@@ -135,13 +124,14 @@ section {
     flex-wrap: wrap;
     transition: box-shadow 0.3s, fill 0.3s, text-shadow 0.3s, color 0.3s;
     &:hover {
-      color: #1dff00;
-      text-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09,
-        0px 0px 16px #00ff09;
+      color: $backlight;
+      text-shadow: 0px 0px 4px $backlight, 0px 0px 8px $backlight,
+        0px 0px 16px $backlight;
     }
     &:hover svg {
-      fill: #1dff00;
-      box-shadow: 0px 0px 4px #00ff09, 0px 0px 8px #00ff09, 0px 0px 16px #00ff09;
+      fill: $backlight;
+      box-shadow: 0px 0px 4px $backlight, 0px 0px 8px $backlight,
+        0px 0px 16px $backlight;
     }
   }
 }
@@ -150,15 +140,10 @@ section {
   overflow: hidden;
   width: 100%;
   flex-grow: 1;
-  box-shadow: inset 0 0 2px var(--backСolor), inset 0 0 4px var(--backСolor),
-    inset 0 0 8px var(--backСolor);
+  box-shadow: inset 0 0 2px $backСolor, inset 0 0 4px $backСolor,
+    inset 0 0 8px $backСolor;
 
-  background: linear-gradient(
-    to top,
-    var(--backСolor),
-    var(--mainСolor),
-    var(--backСolor)
-  );
+  background: linear-gradient(to top, $backСolor, $mainСolor, $backСolor);
   border-radius: 40px;
 }
 .my-skills__content {
@@ -167,7 +152,7 @@ section {
   flex-direction: row;
   height: 100%;
   align-items: center;
-  animation: slide 110s linear infinite;
+  animation: slide 90s linear infinite;
   span {
     display: flex;
     flex-direction: row;
@@ -184,6 +169,82 @@ section {
     animation-play-state: paused;
   }
 }
+#section1 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div {
+    width: 50%;
+    padding: 2%;
+    position: relative;
+  }
+  p {
+    padding-top: 20px;
+  }
+}
+
+#section2 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div {
+    width: 50%;
+    padding: 2%;
+    position: relative;
+  }
+  p {
+    padding-top: 20px;
+  }
+}
+
+#section3 {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div {
+    width: 50%;
+    padding: 2%;
+    position: relative;
+  }
+  p {
+    padding-top: 20px;
+  }
+}
+
+.title {
+  h1 {
+    width: min-content;
+    text-wrap: nowrap;
+  }
+  span {
+    bottom: 0;
+    top: auto;
+  }
+}
 
 @keyframes slide {
   0% {
@@ -194,18 +255,20 @@ section {
   }
 }
 
-.line {
-  border: 1px solid var(--mainСolor);
+@media (max-width: 600px) {
+}
+
+.lineSection {
+  border: 1px solid $mainСolor;
   width: 80%;
   position: absolute;
   top: 10px;
   border-radius: 1px;
-  box-shadow: 0 0 4px var(--mainСolor), 0 0 8px var(--mainСolor),
-    0 0 16px var(--mainСolor);
+  box-shadow: 0 0 4px $mainСolor, 0 0 8px $mainСolor, 0 0 16px $mainСolor;
 }
 
 .icons {
-  fill: #2b9206;
+  fill: $mainСolor;
   height: 20px;
   width: 20px;
   border-radius: 50%;
