--- a/src/css/index.css
+++ b/src/css/index.css
@@ -243,6 +243,11 @@ section {
   top: auto;
 }
 
+.threeJs canvas {
+  width: 100% !important;
+  height: auto !important;
+}
+
 @keyframes slide {
   0% {
     transform: translateX(0%);
