--- a/src/css/index.css
+++ b/src/css/index.css
@@ -81,14 +81,27 @@ section {
   position: relative;
 }
 
+.foto-face {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  height: 90%;
+  width: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translateX(-50%);
+}
+
 .foto {
   width: 100%;
   height: 92%;
   position: relative;
+  overflow: hidden;
 }
 
 .perform {
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   display: flex;
