--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -232,9 +232,10 @@ section {
   padding-top: 20px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-start;
+
   @media (max-width: 600px) {
     flex-direction: column;
     align-items: center;
