--- a/src/css/index.css
+++ b/src/css/index.css
@@ -128,6 +128,15 @@ section {
   flex-direction: column;
   gap: 6px;
 }
+.contacts button {
+  background-color: unset;
+  width: -moz-min-content;
+  width: min-content;
+  padding: 5px;
+  border-radius: 50%;
+  color: #34c300;
+  text-wrap: nowrap;
+}
 .contacts a {
   display: flex;
   gap: 6px;
