--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -138,7 +138,7 @@ section {
     padding: 5px;
     border-radius: 50%;
     color: $mainСolor;
-    text-wrap: nowrap;
+    white-space: nowrap;
   }
   a {
     display: flex;
