--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -201,6 +201,8 @@ section {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-start;
+  min-height: 100vh;
+  height: 100%;
   @media (max-width: 600px) {
     flex-direction: column;
     align-items: center;
@@ -223,6 +225,8 @@ section {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-start;
+  min-height: 100vh;
+  height: 100%;
   @media (max-width: 600px) {
     flex-direction: column;
     align-items: center;
@@ -263,6 +267,7 @@ section {
 }
 
 .title {
+  padding-bottom: 4%;
   h1 {
     width: min-content;
     text-wrap: nowrap;
