--- a/src/css/index.css
+++ b/src/css/index.css
@@ -208,6 +208,11 @@ section {
   padding: 2%;
   position: relative;
 }
+@media (max-width: 600px) {
+  #section1 div {
+    width: 80%;
+  }
+}
 #section1 p {
   padding-top: 20px;
 }
@@ -232,6 +237,11 @@ section {
   width: 50%;
   padding: 2%;
   position: relative;
+}
+@media (max-width: 600px) {
+  #section2 div {
+    width: 80%;
+  }
 }
 #section2 p {
   padding-top: 20px;
