--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,42 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-h1,
-h2,
-h3 {
-  font-weight: normal;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-h1 {
-  font-size: 2em;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #181313;
-  color: #34c300;
-}
-
 .cyber-bg {
   position: fixed;
   top: 0;
@@ -47,7 +9,6 @@ body {
   opacity: 0.1;
   background: linear-gradient(to right, var(--primary-color) 1px, transparent 1px) 0 0/20px 20px, linear-gradient(to bottom, var(--primary-color) 1px, transparent 1px) 0 0/20px 20px;
 }
-
 .cyber-bg::before {
   content: "";
   position: absolute;
@@ -92,48 +53,6 @@ body {
 .nav a.active {
   box-shadow: 0 0 4px #34c300, 0 0 8px #34c300, 0 0 16px #34c300;
   background-color: #1dff00;
-}
-
-.foto-face {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  height: 90%;
-  width: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transform: translateX(-50%);
-}
-
-.foto {
-  width: 100%;
-  height: 92%;
-  position: relative;
-  overflow: hidden;
-}
-
-.perform {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2%;
-}
-
-.dopInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90%;
-  align-items: flex-end;
-}
-.dopInfo div {
-  display: flex;
-  align-items: center;
-  gap: 6px;
 }
 
 .contacts {
@@ -374,6 +293,7 @@ body {
   line-height: 1.6;
   position: relative;
   overflow-x: hidden;
+  background-color: #00030b;
 }
 
 body::before {
@@ -404,6 +324,14 @@ body::before {
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
+  background: linear-gradient(135deg, rgba(28, 31, 79, 0.26), rgba(174, 174, 174, 0.1));
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  border: 1px solid rgba(255, 255, 255, 0.168627451);
+}
+.header-content:hover {
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 .headrProfPhoto {
@@ -414,6 +342,10 @@ body::before {
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
   justify-content: center;
   align-items: center;
+}
+.headrProfPhoto:hover {
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 .profile-photo {
@@ -481,12 +413,14 @@ section {
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 255, 157, 0.2);
-  transition: all 0.3s ease;
+  transition: border 0.3s ease;
+  border: 1px solid rgba(0, 25, 161, 0.5411764706);
 }
-
 section:hover {
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
   transform: translateY(-5px);
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 h2 {
@@ -505,7 +439,7 @@ h2 {
   overflow: hidden;
   width: 100%;
   box-shadow: inset 0 0 2px #181313, inset 0 0 4px #181313, inset 0 0 8px #181313;
-  background: linear-gradient(to top, #181313, rgba(0, 0, 139, 0.7019607843), #181313);
+  background: linear-gradient(to top, #181313, rgba(1, 12, 115, 0.7019607843), #181313);
 }
 
 .skills {
@@ -526,8 +460,9 @@ h2 {
 
 .skill:hover {
   background-color: var(--primary-color);
-  color: var(--bg-color);
-  box-shadow: 0 0 10px rgba(0, 255, 157, 0.7);
+  color: #00bcff;
+  box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+  border: 1px solid #0019a1;
 }
 
 .experience-item,
