--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,38 +2,38 @@ $backСolor: #181313;
 $mainСolor: #34c300;
 $backlight: #1dff00;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-ul,
-ol {
-  list-style: none;
-}
-h1,
-h2,
-h3 {
-  font-weight: normal;
-}
-html {
-  scroll-behavior: smooth;
-}
-h1 {
-  font-size: 2em;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
+// a {
+//   text-decoration: none;
+//   color: inherit;
+// }
+// ul,
+// ol {
+//   list-style: none;
+// }
+// h1,
+// h2,
+// h3 {
+//   font-weight: normal;
+// }
+// html {
+//   scroll-behavior: smooth;
+// }
+// h1 {
+//   font-size: 2em;
+// }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: $backСolor;
-  color: $mainСolor;
-}
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   background-color: $backСolor;
+//   color: $mainСolor;
+// }
 
 .cyber-bg {
   position: fixed;
@@ -51,22 +51,21 @@ body {
       0 0 / 20px 20px,
     linear-gradient(to bottom, var(--primary-color) 1px, transparent 1px) 0 0 /
       20px 20px;
-}
-
-.cyber-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(
-      circle at 50% 50%,
-      var(--secondary-color),
-      transparent 50%
-    ),
-    radial-gradient(circle at 10% 10%, var(--accent-color), transparent 30%);
-  opacity: 0.1;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(
+        circle at 50% 50%,
+        var(--secondary-color),
+        transparent 50%
+      ),
+      radial-gradient(circle at 10% 10%, var(--accent-color), transparent 30%);
+    opacity: 0.1;
+  }
 }
 
 .nav {
@@ -123,44 +122,44 @@ body {
 // #section0 {
 //   overflow: hidden;
 // }
-.foto-face {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  height: 90%;
-  width: auto;
-  object-fit: cover;
-  transform: translateX(-50%);
-}
+// .foto-face {
+//   position: absolute;
+//   top: 10%;
+//   left: 50%;
+//   height: 90%;
+//   width: auto;
+//   object-fit: cover;
+//   transform: translateX(-50%);
+// }
 
-.foto {
-  width: 100%;
-  height: 92%;
-  position: relative;
-  overflow: hidden;
-}
-.perform {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2%;
-}
-.dopInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90%;
-  align-items: flex-end;
-  div {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-  }
-}
+// .foto {
+//   width: 100%;
+//   height: 92%;
+//   position: relative;
+//   overflow: hidden;
+// }
+// .perform {
+//   position: absolute;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-between;
+//   padding: 2%;
+// }
+// .dopInfo {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   height: 90%;
+//   align-items: flex-end;
+//   div {
+//     display: flex;
+//     align-items: center;
+//     gap: 6px;
+//   }
+// }
 
 .contacts {
   display: flex;
@@ -456,6 +455,7 @@ body {
   line-height: 1.6;
   position: relative;
   overflow-x: hidden;
+  background-color: #00030b;
 }
 
 body::before {
@@ -512,6 +512,17 @@ body::before {
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
+  background: linear-gradient(
+    135deg,
+    rgb(28 31 79 / 26%),
+    rgb(174 174 174 / 10%)
+  );
+  backdrop-filter: blur(2px);
+  border: 1px solid rgba(255, 255, 255, 0.168627451);
+  &:hover {
+    box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+    border: 1px solid #0019a1;
+  }
 }
 
 .headrProfPhoto {
@@ -522,6 +533,10 @@ body::before {
   box-shadow: 0 0 20px rgba(0, 255, 157, 0.3);
   justify-content: center;
   align-items: center;
+  &:hover {
+    box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+    border: 1px solid #0019a1;
+  }
 }
 .profile-photo {
   width: 100%;
@@ -593,13 +608,22 @@ section {
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 255, 157, 0.2);
-  transition: all 0.3s ease;
+  transition: border 0.3s ease;
+  border: 1px solid #0019a18a;
+  &:hover {
+    box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
+    transform: translateY(-5px);
+    box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+    border: 1px solid #0019a1;
+  }
 }
 
-section:hover {
-  box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
-  transform: translateY(-5px);
-}
+// section:hover {
+//   box-shadow: 0 0 20px rgba(0, 255, 157, 0.4);
+//   transform: translateY(-5px);
+//   box-shadow: 0 0 10px rgba(184, 0, 255, 0.7);
+//   border: 1px solid #0019a1;
+// }
 
 h2 {
   font-family: "Orbitron", sans-serif;
@@ -618,7 +642,7 @@ h2 {
   width: 100%;
   box-shadow: inset 0 0 2px #181313, inset 0 0 4px #181313,
     inset 0 0 8px #181313;
-  background: linear-gradient(to top, #181313, #00008bb3, #181313);
+  background: linear-gradient(to top, #181313, #010c73b3, #181313);
 }
 
 .skills {
@@ -639,8 +663,9 @@ h2 {
 
 .skill:hover {
   background-color: var(--primary-color);
-  color: var(--bg-color);
-  box-shadow: 0 0 10px rgba(0, 255, 157, 0.7);
+  color: #00bcff;
+  box-shadow: 0 0 10px rgb(184 0 255 / 70%);
+  border: 1px solid #0019a1;
 }
 
 .experience-item,
