--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -339,13 +339,13 @@ h2 {
   font-size: 0.9rem;
 }
 
-.work-image {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 5px;
-  margin-bottom: 0.5rem;
-}
+// .work-image {
+//   width: 100%;
+//   height: 150px;
+//   object-fit: cover;
+//   border-radius: 5px;
+//   margin-bottom: 0.5rem;
+// }
 
 .work-item {
   position: relative;
