--- a/src/css/index.css
+++ b/src/css/index.css
@@ -317,8 +317,7 @@ h2 {
   position: relative;
   overflow: hidden;
 }
-
-.work-image {
+.work-item img {
   width: 100%;
   height: 200px;
   -o-object-fit: cover;
