--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -339,25 +339,16 @@ h2 {
   font-size: 0.9rem;
 }
 
-// .work-image {
-//   width: 100%;
-//   height: 150px;
-//   object-fit: cover;
-//   border-radius: 5px;
-//   margin-bottom: 0.5rem;
-// }
-
 .work-item {
   position: relative;
   overflow: hidden;
-}
-
-.work-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
+  img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+  }
 }
 
 .work-overlay {
