--- a/src/css/index.css
+++ b/src/css/index.css
@@ -273,7 +273,10 @@ h2 {
   padding-left: 1rem;
   border-left: 2px solid var(--secondary-color);
 }
-
+.experience-item ul li,
+.education-item ul li {
+  font-size: 12px;
+}
 .experience-item h3,
 .education-item h3 {
   font-size: 1.1rem;
