--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -210,7 +210,7 @@ body {
 
 .name {
   font-family: "Orbitron", sans-serif;
-  font-size: 2.5rem;
+  font-size: clamp(1rem, 8vw, 3rem);
   color: var(--primary-color);
   margin-bottom: 0.5rem;
   letter-spacing: 3px;
@@ -253,7 +253,7 @@ section {
 
 h2 {
   font-family: "Orbitron", sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(0.9rem, 2.3vw, 1.4rem);
   color: var(--primary-color);
 
   padding-bottom: 0.5rem;
