--- a/src/css/index.css
+++ b/src/css/index.css
@@ -249,6 +249,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
+  margin-bottom: 35px;
 }
 
 .skill {
@@ -275,7 +276,7 @@ h2 {
 }
 .experience-item ul li,
 .education-item ul li {
-  font-size: 12px;
+  font-size: 13px;
 }
 .experience-item h3,
 .education-item h3 {
@@ -291,22 +292,27 @@ h2 {
   font-style: italic;
 }
 
-.statistics-grid,
+.otherSkills-grid,
 .works-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
 }
 
-.statistics-grid {
-  width: auto;
+.otherSkills-grid p {
+  font-size: 13px;
 }
-.statistics-grid a {
+
+.codewars-a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin: 13px;
 }
-.statistics-grid img {
+.codewars-a img {
   width: 100%;
 }
 
@@ -423,8 +429,8 @@ a:hover {
   grid-area: education;
 }
 
-#statistics {
-  grid-area: statistics;
+#otherSkills {
+  grid-area: otherSkills;
 }
 
 #works {
@@ -436,13 +442,13 @@ a:hover {
 }
 
 .container {
-  grid-template-areas: "header-content header-content headrProfPhoto" "skilRunLine skilRunLine skilRunLine" "skills experience statistics" "education works works" "contact works works";
+  grid-template-areas: "header-content header-content headrProfPhoto" "skilRunLine skilRunLine skilRunLine" "skills experience otherSkills" "education works works" "contact works works";
 }
 
 @media (max-width: 900px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-areas: "headrProfPhoto" "header-content" "skilRunLine" "skills" "experience" "education" "statistics" "works" "contact";
+    grid-template-areas: "headrProfPhoto" "header-content" "skilRunLine" "skills" "experience" "education" "otherSkills" "works" "contact";
   }
   header {
     flex-direction: column;
